# scratch

.github/workflows/: windows.yml
pybind/: CMakeLists.txt  pyproject.toml  test.cpp
